--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <input type="search" id="site-search" name="search" aria-label="Search through site content">
             <button>Search</button>
 		</nav>
-		<section>
+		<section class="top-section">
 			<h3>COVID Restriction Update</h3>
 
 			<p>Throughout the pandemic we have strove to make the surgery as safe as possible for all our patients and
